# Infrastrucutre-accelerator

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARCHITECTURE.md  CI_CD.md  CLAUDE.md  GENERATOR_README.md  GITHUB_ENV_SETUP.md  Makefile  README.md  SECURITY_REPORT.md  TESTING_PLAN.md  UX_ANALYSIS.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  test-dark-mode.html
.github/: SECRETS_MIGRATION_GUIDE.md  VERCEL_SETUP.md
.github/workflows/: MANUAL_DEPLOYMENT_TEST.md  deploy-vercel.yml  generate-infrastructure.yml  manual-deployment-test.yml  security-tests.yml  test.yml
docs/: DIAGRAM_SYSTEM.md  GITHUB_ACTIONS_SETUP.md  README.md  TESTING_REPORT.md  TEST_COVERAGE.md  TEST_VALIDATION_README.md  WORKFLOW_MONITORING.md  index.html  run-tests.sh  test-validation.html  test-validation.js
docs/css/: style.css
docs/js/: app.js  auth.js  cost-calculator.js  dependency-graph.js  security.js  workflow-monitor.js
generated-infra/: .gitlab-ci.yml  README.md
infra/: .gitlab-ci.yml
infra/common/: README.md  acm.tf  alarms-rds.tf  alb.tf  backend.tf  data.tf  ecr.tf  external_dns.tf  gitlab.tf  grafana.tf  guardduty.tf  karpenter.tf  locals.tf  main.tf  okta.tf  output.tf  policy.tf  provider.tf  rds.tf  rds_retool.tf  retool.tf  s3.tf  secrets.tf  sns.tf  tfplan  vanta.tf  variable.tf  vpc.tf  vpn.tf
infra/eks/: alb.tf  data.tf  external_dns.tf  karpenter.tf  local.tf  main.tf  metrics_server.tf  output.tf  policy.tf  provider.tf  variable.tf
infra/monitoring/: alarms-apigateway.tf  alarms-labda.tf  alarms-rds.tf  data.tf  local.tf  main.tf  output.tf  (+3 more)
modules/: .gitlab-ci.yml  README.md
template-modules/: VARIABLES.md
tests/: README.md  TEST_README.md  __init__.py  cloud_features.test.js  cost-calculator.test.js  test-environment-checkbox-v2.html  test-environment-checkbox.html  test_cloud_features.html  test_diagram_rendering.html  test_generator.py  test_infrastructure_generator.py  test_integration.py  test_security_validator.py  test_validation.html  test_validator.py  test_web_security.html  validation.test.js  workflow-monitor.test.js
vercel-backend/: .env.example  README.md  package.json  vercel.json
(+148 files in other folders)
